src/objects/c2g__codaGroupingReference__c.object
<CustomObject>
    <description>Internal object that provides new references for various processes within the application.</description>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Grouping References</relationshipLabel>
        <relationshipName>GroupingReferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ReferenceType__c</fullName>
        <description>The type of reference</description>
        <label>Reference Type</label>
        <picklist>
            <picklistValues>
                <fullName>Invoice Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income Schedule Group</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Grouping Reference</label>
    <listViews>
        <fullName>FF_Fly_Now_Pay_Later_Limited_06936813_codaGroupingReference</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Fly Now Pay Later Limited (06936813)</label>
        <queue>FF_Fly_Now_Pay_Later_Limited_06936813</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_Limited_codaGroupingReference</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund Limited</label>
        <queue>FF_Travelfund_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_co_uk_Limited_codaGroupingReference</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund.co.uk Limited</label>
        <queue>FF_Travelfund_co_uk_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Document Reference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grouping References</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>